--- a/paper/performance_merged_table.tex
+++ b/paper/performance_merged_table.tex
@@ -1,7 +1,6 @@
-\begin{tabular}{lr}
+\begin{tabular}{lc}
 \toprule
-{} &  Normalized\_Rank \\
-Name                       &                  \\
+Name                       &    $\bar{r}$ \\
 \midrule
 Limited Retaliate 3        &          0.28609 \\
 Retaliate 3                &          0.29630 \\
@@ -12,7 +11,7 @@ Retaliate                  &          0.31707 \\
 BackStabber                &          0.32381 \\
 DoubleCrosser              &          0.33136 \\
 Nice Meta Winner           &          0.34921 \\
-PSO Gambler 2\_2\_2 Noise 05 &          0.35146 \\
+PSO Gambler 2 2 2 Noise 05 &          0.35146 \\
 Grudger                    &          0.35156 \\
 Evolved HMM 5              &          0.35714 \\
 NMWE Memory One            &          0.35714 \\
